@@ -1,5 +1,7 @@
 2007-03-08  Junichi Uekawa  <dancer@debian.org>
 
+	* cowdancer.c(ctor): add constructor
+
 	* tests/021_test_open.c (main): C source for testing it.
 	(main): add check that initial open is the problem.
 
